selfhost/test/typechecker/_lexer_error.out
Error at %FILE_NAME%:1:6
Unexpected character '~':
  |  func ~(a: Int)
          ^
